--- a/stripe_project/infra/nginx.conf
+++ b/stripe_project/infra/nginx.conf
@@ -1,39 +1,43 @@
 server {
     listen 80;
-    server_name  127.0.0.1;
+
+    server_name 127.0.0.1;
+    client_max_body_size 25M;
     server_tokens off;
 
     location /media/ {
-        alias /var/html/media/;
+        root /var/html/;
     }
 
-    location /static/ {
-        alias /var/html/static/;
+    location /static/admin/ {
+	alias /var/html/static/admin/;
+    }
+
+    location /static/rest_framework/ {
+        alias /var/html/static/rest_framework/;
     }
 
     location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000/api/;
-        include /etc/nginx/proxy_params;
     }
 
     location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000/admin/;
-        include /etc/nginx/proxy_params; 
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html/;
-        try_files $uri $uri/ /index.html;
-    }
-
-    location / {
-        root /usr/share/nginx/html/;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-    }
+    # location /api/docs/ {
+    #     root /usr/share/nginx/html/;
+    #     try_files $uri $uri/redoc.html;
+    # }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-      root    /usr/share/nginx/html/;
+        root /var/html/frontend/;
     }
 }
